--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
 body{
     font-family: 'Open Sans', sans-serif;
-    margin: 0;
+    margin: 0%;
+}
+.haif-width{
+    width: 40%;
+    float: left;
+    margin-left: 5%;
+    padding-left: 2%;
 }
 h1{
     font-size: 60px;
@@ -8,13 +14,7 @@ h1{
 .highlight{
     color: chartreuse;
 }
-.haif-width{
-    float: left;
-    width: 40%;
-    margin-left: 5%;
-    padding-left: 2%;
-}
-.haif-width img{
+img{
     width: 100%;
 }
 .top-banner{
@@ -26,15 +26,15 @@ section{
     padding-bottom: 150px;
 }
 .link-button{
-    text-decoration: none;
-    background-color: coral;
-    color: cornsilk;
-    border: 2px solid deepskyblue;
-    border-radius: 10px;
-    padding: 5px 15px;
+    background-color: cyan;
+    color: white;
+    border: 2px solid chartreuse;
+    border-radius: 15px;
+    padding: 10px 20px;
+    font-size: 20px;
 }
-.dream{
-    background-image: url("images/dream-bg.png");
+.mid-banner{
+    background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
 }
@@ -43,16 +43,8 @@ section{
     border-radius: 10px;
     height: 80%;
 }
-#full-stack{
-    border-left: 5px solid;
-    border-image: linear-gradient(180 ,rgb(255, 115, 0) ,rgb(255, 154, 71)) ;
-}
-#baby-web{
-    border-left: 5px solid;
-    border-image: linear-gradient(180 ,rgba(0, 0, 255, 0.76) ,rgb(71, 114, 255)) ;
-}
 footer{
     text-align: center;
     background-color: black;
-    color: antiquewhite;    
+    color: white;
 }
