--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ section{
     padding-bottom: 150px;
 }
 .link-button{
+    text-decoration: none;
     background-color: cyan;
     color: white;
     border: 2px solid chartreuse;
