--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 body{
     font-family: 'Open Sans', sans-serif;
     margin: 0%;
+    background-image: url("images/top-banner.png"),url(images/dream-bg.png);
+    background-repeat: no-repeat,no-repeat;
+    background-position:left , right;
 }
 .haif-width{
     width: 40%;
@@ -18,8 +21,8 @@ img{
     width: 100%;
 }
 .top-banner{
-    background-image: url("images/top-banner.png");
-    background-repeat: no-repeat;
+    <!--background-image: url("images/top-banner.png");-->
+    <!--background-repeat: no-repeat;-->
 }
 section{
     height: 500px;
